v3.10.0:
 Users:
  - Removing unused and old templates
  - sort items in the TS viewer by tsId
 Developers:
  - Update TiltSeries data model to manage properly the even/odd tilt-series as metadata instead of
    independent objects.
  - Update TCL and some test data description.

v3.9.2: add tomo course 2024 template --> HIV processing workflow.
v3.9.1:
 Users:
  - Import TomoMasks: it now admits {TS} pattern.
  - Import TS: Improve TS accumulated dose determination when using mdoc.
  - Import Tomograms: exclusion words fixed in import tomograms when not using a pattern.
  - Scipion metadata viewer for SetOfTomograms and SetOfTomoMasks: updated the visible fields and order.
 Developers:
  - Tilt Series class:
     * Fix the clone method --> now it is a literal clone is expected by default instead
       of ignoring some attributes.
     * Fix TS reStack method.
     * Methods applyTSTransform and generateTltFile updated to work with presentAcqOrders.
  - Import TomoMasks refactored.
  - Fixing an error in the compose_TS protocol creating the TS
  - Using the getSize method to get the anglesCount
  - Fix TS motioncor viewer
v3.9.0:
 Users: 
  - Add a protocol for filtering coordinates based on a mask.
  - TS viewer: Adding angles and the transformation matrix information
  - Update napari to v0.4.19
  - Steps more precise in GPU usage. Improved execution
  - add export coordinates 3D protocol
 Developers:
  - Execution mode at class level
  - Protocol assign transformation to TS: fix a bug in the assignment of the tilt angle to each new tilt image.
v3.8.0:
 Users:
  - Import tomograms, CTFs and Transformation matrices (IMOD): added import functionality using the pattern {TS} to
    select the substring that will be considered as tsId.
  - Import TS:
    * Fix the heterogeneous set of TS validation using a range of angles.
    * Multiple TS can be imported without the label {TS}.
  - Join heterogeneous sets are possible for tomography objects TS and tomograms.